Style: Fix horizontal scroll on reveal animations

--- a/src/global/styles/global.css
+++ b/src/global/styles/global.css
@@ -13,6 +13,8 @@ body {
 	font-family: "Inter", sans-serif;
 	line-height: 1.625;
 	background-color: var(--clr-body-bg);
+	width: 100vw;
+	overflow-x: hidden;
 }
 
 #root {
